<resources>
    <string name="back4app_server_url">https://etep-reminder.back4app.io/</string>
    <string name="back4app_webhosting">https://etep-reminder.back4app.io/</string>

    <!-- Change the following strings as required -->
    <string name="back4app_app_id">rfJYNftlm2x4s4ihdMUTSM5RGni8jTAuHQHyOlEW</string>
    <string name="back4app_client_key">mV66LqORNRwrr8FdtMBJx63pVFx81WXywAYJO1Jd</string>
    <string name="gcmSenderId">537003505746</string>

    <string name="app_name">Reminder</string>

    <string name="today">Hoje</string>
    <string name="tomorrow">Amanhã</string>
    <string name="nextDays">Próximos dias</string>

    <string name="LoginUsername">Usuário</string>
    <string name="LoginPassword">Senha</string>
    <string name="btnLogin">Acessar</string>
    <string name="errorLoginSignUpEmpty">Preencha corretamente os campos!</string>
    <string name="errorLoginDontMatch">Usuário/Senha não correspondem!</string>
    <string name="errorLoginEmailVerified">Verifique seu e-mail primeiro!</string>
    <string name="errorSignUpLength">Digite no mínimo 3 caracteres!</string>
    <string name="errorSignUpEmailFormat">Insira um e-mail válido!</string>

    <string name="logoutTitle">Você tem certeza?</string>
    <string name="logoutMessage">Você será desconectado dessa conta.</string>

    <string name="alertDialogPositive">Sim</string>
    <string name="alertDialogNegative">Não</string>
    <string name="alertDialogNeutral">Cancelar</string>

    <string name="SignUpUsername">Usuário</string>
    <string name="SignUpEmail">E-mail</string>
    <string name="SignUpPassword">Senha</string>
    <string name="btnSignUp">Criar</string>
    <string name="SignUpTitle">Falta pouco para ativar sua conta...</string>
    <string name="SignUpEmailVerificationSent">As instruções foram enviadas para sua caixa de entrada!</string>

    <string name="forgotPassword">Esqueceu a senha?</string>
    <string name="instructionsForgotPassword">Insira seu e-mail no campo abaixo para que as instruções sejam enviadas.</string>
    <string name="sendForgotPassword">Enviar</string>
    <string name="ForgotPasswordTitle">Você está próximo de recuperar sua senha</string>
    <string name="ForgotPasswordEmailVerificationButton">Voltar</string>
    <string name="ForgotPasswordEmailVerificationSent">As instruções foram enviadas para sua caixa de entrada!</string>
    <string name="ForgotPasswordEmailVerificationNotSent">E-mail não encontrado!</string>

    <string name="addTaskName">Insira um título!</string>
    <string name="addTaskDescription">Insira uma descrição!</string>
    <string name="addTaskDate">Selecione uma data!</string>
    <string name="addTaskTime">Selecione um horário!</string>

    <string name="emailAlreadyExists">E-mail já existente!</string>
    <string name="UsernameTaken">Usuário já existente!</string>
    <string name="errorNotKnown">Verifique seus dados ou tente novamente!</string>

    <string name="taskObjectCreated">Novo item adicionado!</string>
    <string name="taskObjectUpdated">Item atualizado!</string>
    <string name="taskObjectNotCreated">Verifique os dados e tente novamente!</string>
    <string name="itemObjectDeleted">O item foi deletado!</string>
    <string name="itemObjectNotDeleted">O objeto não foi encontrado!</string>
    <string name="titleAlert">Escolha uma ação para esse item.</string>
    <string name="actionAlert">Selecione uma das opções...</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
